# velvet

./: .env  .gitignore  Cargo.toml  README.md
examples/: 01_base.rs  02_logging.rs  03_metrics.rs  04_database.rs  05_client.rs  06_token.rs  07_statics.rs  08_full.rs  09_testing.rs  10_login.rs  11_mail.rs  12_login_mail.rs
src/: app.rs  auth.rs  client.rs  cookies.rs  db.rs  errors.rs  lib.rs  mail.rs  metrics.rs
src/auth/: jwt.rs  login.rs  mod.rs
src/auth/login/: default_flow.rs  mod.rs
templates/: confirm.html  login.html  mail_confirm.html  mail_confirm.txt  register.html
tests/: login.rs  test.rs
tests/example_app/: mod.rs
