[package]
name = "velvet-web"
version = "0.3.3"
edition = "2021"
authors = ["Raffaele Ragni <raffaele.ragni@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Wrapper stack for webapp apis"
homepage = "https://github.com/raffaeleragni/velvet"
repository = "https://github.com/raffaeleragni/velvet"
documentation = "https://github.com/raffaeleragni/velvet/blob/master/README.md"
readme = "README.md"
keywords = ["webapp", "api", "microservice"]
categories = ["web-programming", "web-programming::http-server"]
include = ["/src", "/LICENSE-MIT", "/LICENSE-APACHE"]

[features]
auth = ["dep:axum-extra", "dep:jsonwebtoken"]
mysql = ["sqlx/mysql"]
postgres = ["sqlx/postgres"]
sqlite = ["sqlx/sqlite"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }

axum = { version = "0.7", features = ["http2", "macros"] }
axum-prometheus = "0.7"
axum-server ={ version = "0.7.1", features = ["rustls", "tls-rustls", "tokio-rustls", "rustls-pemfile"] }

askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"

sqlx = { version = "0.8", features = ["runtime-tokio"] }

dotenvy = "0.15"

anyhow = "1"
sentry = { version = "0.34", features = ["anyhow", "tower", "tracing"] }
sentry-tower = { version = "0.34", features = ["axum", "http"] }
tracing = "0.1"
valuable = { version = "0.1.0", features = ["derive", "valuable-derive"] }
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

reqwest = { version = "0.12", features = ["gzip", "h3", "h3-quinn", "json", "multipart", "quinn", "stream"] }
rust-embed = { version = "8.5", features = ["axum", "tokio"] }
mime_guess = "2.0"
tower-http = { version = "0.5.2", features = ["compression-full", "decompression-full"] }

axum-extra = { optional = true, version = "0.9", features = ["cookie"] }
jsonwebtoken = { optional = true, version = "9.3" }

